fix(style) add z-index padding margin

--- a/demo/index.css
+++ b/demo/index.css
@@ -1,10 +1,7 @@
 * {
     padding: 0;
-    margin: 0;
+    margin: 5px;
     box-sizing: border-box;
-}
-body {
-    padding: 10px;
 }
 ul {
     list-style: none;
